fix: 修改脚注与部分样式

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -28,7 +28,7 @@
 }
 
 html {
-  scrollbar-color: rgba(82, 82, 82, 0.8) transparent;
+  scrollbar-color: #7E84F7 transparent;
   height: 100%;
   font-size: 18px;
 }
