--- a/src/styles/theme-variables.scss
+++ b/src/styles/theme-variables.scss
@@ -143,7 +143,7 @@
   --skeleton-hl: #363636;
   --text-bright: #fff;
   --text-invert: #000000;
-  --text-normal: #bebebe;
+  --text-normal: #ffffffcf;
   --text-accent: #0fb6d6;
   --text-sub-accent: #f4569d;
   --text-dim: #6d6d6d;
