--- a/src/styles/components/article.scss
+++ b/src/styles/components/article.scss
@@ -688,10 +688,19 @@ div[class^="language-"] {
   @apply relative rounded-2xl overflow-hidden shadow my-6;
 }
 
-div[class^="language-"] .lang,
+div[class^="language-"] .lang
+{
+  @apply absolute top-4 right-5 z-50 opacity-90 capitalize;
+  color: wheat
+}
+
 div[class^="language-"] button
 {
   @apply absolute top-4 right-5 z-50 opacity-40 capitalize;
+  height: 2rem;
+  width: 2rem;
+  border-radius: 0.5rem;
+  background: white;
 }
 
 div[class^="language-"] pre {
