--- a/templates/index_prod.html
+++ b/templates/index_prod.html
@@ -6,11 +6,44 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <link rel="icon" href="/favicon.ico" />
+    <style type="text/css">
+      /* HTML: <div class="loader"></div> */
+      .loader {
+          width: 200px;
+          height: 22px;
+          border-radius: 20px;
+          color: #514b82;
+          border: 2px solid;
+          position: absolute;
+          top: 50%;
+          left: 50%;
+          transform: translate(-50%, -50%);
+      }
+      .loader::before {
+          content: "";
+          position: absolute;
+          margin: 2px;
+          inset: 0 100% 0 0;
+          border-radius: inherit;
+          background: currentColor;
+          animation: l6 2s infinite;
+      }
+      @keyframes l6 {
+          100% {inset:0}
+      }
+  </style>
   </head>
   <body id="body-container">
     <noscript>
       <strong>We're sorry but this app doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
+    <div class="loader"><br><br>配置网络代理可以加速访问</div>
     <div id="app"></div>
+    <script>
+      window.addEventListener('load', function() {
+          var loader = document.querySelector('.loader');
+          loader.remove();
+      });
+    </script>
   </body>
 </html>
