fix: :bug: 去除模板中的waline

--- a/templates/index.html
+++ b/templates/index.html
@@ -35,10 +35,10 @@
       src="https://unpkg.com/twikoo@^1.6.17/dist/twikoo.all.min.js"
     ></script>
     <link rel="stylesheet" href="https://fonts.loli.net/css?family=Rubik" />
-    <link
+    <!-- <link
       rel="stylesheet"
       href="https://unpkg.com/@waline/client@v2/dist/waline.css"
-    />
+    /> -->
     <title>Development Template</title>
   </head>
   <body id="body-container">
