fix: :zap: 替换领动cdn

--- a/templates/index.html
+++ b/templates/index.html
@@ -34,11 +34,12 @@
       rel="preload"
       src="https://unpkg.com/twikoo@^1.6.17/dist/twikoo.all.min.js"
     ></script>
-    <link rel="stylesheet" href="https://fonts.loli.net/css?family=Rubik" />
-    <!-- <link
+    <!-- <link rel="stylesheet" href="https://fonts.loli.net/css?family=Rubik" /> -->
+    <link rel="stylesheet" href="a3.leadongcdn.com/attachment/jjjkKBlomjRjkSjkkokjjpSR7ww7fgzb73r/Rubik.css" />
+    <link
       rel="stylesheet"
-      href="https://unpkg.com/@waline/client@v2/dist/waline.css"
-    /> -->
+      href="a3.leadongcdn.com/attachment/jkjjKBlomjRjkSjkkorrjlSR7ww7fgzb73r/waline.mjs"
+    />
     <title>Development Template</title>
   </head>
   <body id="body-container">
