fix: :zap: 替换领动cdn

--- a/templates/index.html
+++ b/templates/index.html
@@ -35,10 +35,10 @@
       src="https://unpkg.com/twikoo@^1.6.17/dist/twikoo.all.min.js"
     ></script>
     <!-- <link rel="stylesheet" href="https://fonts.loli.net/css?family=Rubik" /> -->
-    <link rel="stylesheet" href="a3.leadongcdn.com/attachment/jjjkKBlomjRjkSjkkokjjpSR7ww7fgzb73r/Rubik.css" />
+    <link rel="stylesheet" href="https://a3.leadongcdn.com/attachment/jjjkKBlomjRjkSjkkokjjpSR7ww7fgzb73r/Rubik.css" />
     <link
       rel="stylesheet"
-      href="a3.leadongcdn.com/attachment/jkjjKBlomjRjkSjkkorrjlSR7ww7fgzb73r/waline.mjs"
+      href="https://a3.leadongcdn.com/attachment/jkjjKBlomjRjkSjkkorrjlSR7ww7fgzb73r/waline.mjs"
     />
     <title>Development Template</title>
   </head>
