fix: :zap: 替换回JsDeliver

--- a/templates/index.html
+++ b/templates/index.html
@@ -34,11 +34,10 @@
       rel="preload"
       src="https://unpkg.com/twikoo@^1.6.17/dist/twikoo.all.min.js"
     ></script>
-    <!-- <link rel="stylesheet" href="https://fonts.loli.net/css?family=Rubik" /> -->
-    <link rel="stylesheet" href="https://a3.leadongcdn.com/attachment/jjjkKBlomjRjkSjkkokjjpSR7ww7fgzb73r/Rubik.css" />
+    <link rel="stylesheet" href="https://fonts.loli.net/css?family=Rubik" />
     <link
       rel="stylesheet"
-      href="https://a3.leadongcdn.com/attachment/jkjjKBlomjRjkSjkkorrjlSR7ww7fgzb73r/waline.mjs"
+      href="https://cdn.jsdelivr.net/npm/@waline/client@2.15.8/dist/waline.mjs"
     />
     <title>Development Template</title>
   </head>
