--- a/templates/index.html
+++ b/templates/index.html
@@ -37,7 +37,7 @@
     <link rel="stylesheet" href="https://fonts.loli.net/css?family=Rubik" />
     <link
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/@waline/client@2.15.8/dist/waline.mjs"
+      href="https://unpkg.17yun.bf/@waline/client@v2/dist/waline.mjs"
     />
     <title>Development Template</title>
   </head>
