--- a/templates/index_prod.html
+++ b/templates/index_prod.html
@@ -37,7 +37,7 @@
     <noscript>
       <strong>We're sorry but this app doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
-    <div class="loader"><br><br>配置网络代理可以加速访问</div>
+    <div class="loader"><br><br>加载中...如长时间显示此页面，请配置网络代理</div>
     <div id="app"></div>
     <script>
       window.addEventListener('load', function() {
