--- a/templates/index.html
+++ b/templates/index.html
@@ -34,10 +34,10 @@
       rel="preload"
       src="https://unpkg.com/twikoo@^1.6.17/dist/twikoo.all.min.js"
     ></script>
-    <link rel="stylesheet" href="https://fonts.loli.net/css?family=Rubik" />
+    <link rel="stylesheet" href="http://cdn.zair.top/aurora-cdn/cssfamily%3DRubik" />
     <link
       rel="stylesheet"
-      href="https://unpkg.17yun.bf/@waline/client@v2/dist/waline.mjs"
+      href="http://cdn.zair.top/aurora-cdn/waline.mjs"
     />
     <title>Development Template</title>
   </head>
