--- a/templates/index.html
+++ b/templates/index.html
@@ -34,7 +34,7 @@
       rel="preload"
       src="https://unpkg.com/twikoo@^1.6.17/dist/twikoo.all.min.js"
     ></script>
-    <link rel="stylesheet" href="https://cdn1.zair.top/cdn/cssfamily%3DRubik" />
+    <link rel="stylesheet" href="https://fonts.loli.net/css?family=Rubik" />
     <link
       rel="stylesheet"
       href="https://cdn1.zair.top/cdn/waline.mjs"
